Update and rename tp.html to index.html

--- a/index.html
+++ b/index.html
@@ -1007,7 +1007,7 @@ footer{
           <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor"><path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413z"/></svg>
           Chat on WhatsApp
         </a>
-        <a href="mailto:hello@thenux.dev" class="btn-outline ripple-btn" style="text-decoration:none">📧 Send Email</a>
+        <a href="/cdn-cgi/l/email-protection#abc3cec7c7c4ebdfc3cec5ded385cfcedd" class="btn-outline ripple-btn" style="text-decoration:none">📧 Send Email</a>
       </div>
     </div>
   </div>
@@ -1023,7 +1023,7 @@ footer{
           <h2>Let's build something <span>legendary.</span></h2>
           <p>Open for freelance, partnerships, and full-time roles. Have a bold idea? I'll make it real — and unforgettable.</p>
           <div class="c-items">
-            <div class="c-item"><div class="c-icon">📧</div><span>hello@thenux.dev</span></div>
+            <div class="c-item"><div class="c-icon">📧</div><span><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="a2cac7cececde2d6cac7ccd7da8cc6c7d4">[email&#160;protected]</a></span></div>
             <div class="c-item"><div class="c-icon">📱</div><span>+94771479121 (WhatsApp)</span></div>
             <div class="c-item"><div class="c-icon">📍</div><span>Global — Remote First</span></div>
             <div class="c-item"><div class="c-icon">⏱</div><span>Response within 12 hours</span></div>
@@ -1075,7 +1075,7 @@ footer{
 <!-- ═══════════════════════════════════════════════════════════════
    SCRIPTS
 ═══════════════════════════════════════════════════════════════ -->
-<script>
+<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
 'use strict';
 /* ─────────── GLOBAL STATE ─────────── */
 let userIp = 'Unknown';
@@ -1288,12 +1288,8 @@ document.querySelectorAll('.fc').forEach(card => {
 
 /* ─────────── PROJECT RENDERING ─────────── */
 const DEFAULT_PROJECTS = [
-  {id:'d1',name:'NexaOS Dashboard',desc:'AI-powered SaaS analytics platform with real-time ML insights, predictive visualization, and multi-tenant arch.',tags:['React','AI/ML','D3.js','AWS'],emoji:'🖥️',bg:'linear-gradient(135deg,#060a18,#1a1060)',size:'pc-lg',badge:'FEATURED',url:''},
-  {id:'d2',name:'AuraStore',desc:'Next-gen e-commerce with AR product try-on, 3D viewer, and Stripe integration.',tags:['Next.js','Three.js','Stripe'],emoji:'🛍️',bg:'linear-gradient(135deg,#060e08,#0d3520)',size:'pc-sm',badge:'LIVE',url:''},
-  {id:'d3',name:'PulseApp',desc:'Health & fitness mobile app with ML-powered personalized workout recommendations and wearable sync.',tags:['React Native','Node','ML'],emoji:'💪',bg:'linear-gradient(135deg,#150808,#3a0a18)',size:'pc-md',badge:'APP',url:''},
-  {id:'d4',name:'Cryptex Wallet',desc:'Decentralized crypto wallet with DeFi integrations, portfolio analytics, and hardware wallet support.',tags:['Web3','Solidity','React'],emoji:'🔐',bg:'linear-gradient(135deg,#060812,#0a0f40)',size:'pc-md',badge:'WEB3',url:''},
-  {id:'d5',name:'VoiceFlow AI',desc:'Real-time voice transcription and AI meeting assistant for enterprise teams.',tags:['Python','WebRTC','GPT-4'],emoji:'🎙️',bg:'linear-gradient(135deg,#080e06,#142810)',size:'pc-sm',badge:'AI',url:''},
-  {id:'d6',name:'Lumina CMS',desc:'Headless CMS with visual drag-and-drop builder, multi-platform publishing, and edge delivery.',tags:['TypeScript','GraphQL','AWS'],emoji:'✍️',bg:'linear-gradient(135deg,#12060e,#2d0826)',size:'pc-lg',badge:'SAAS',url:''},
+  {id:'d1',name:'TEST',desc:'AI-powered SaaS analytics platform with real-time ML insights, predictive visualization, and multi-tenant arch.',tags:['React','AI/ML','D3.js','AWS'],emoji:'🖥️',bg:'linear-gradient(135deg,#060a18,#1a1060)',size:'pc-lg',badge:'FEATURED',url:''},
+  
 ];
 const allProjects = () => [...DEFAULT_PROJECTS, ...projects];
 
@@ -1332,8 +1328,10 @@ function renderProjects() {
     }
     grid.appendChild(card);
   });
-  // re-observe new cards
-  document.querySelectorAll('.proj-card.reveal:not(.vis)').forEach(el => revObs.observe(el));
+  // re-observe new cards (safe: revObs may not exist yet on first load)
+  if (typeof revObs !== 'undefined') {
+    document.querySelectorAll('.proj-card.reveal:not(.vis)').forEach(el => revObs.observe(el));
+  }
 }
 function deleteProject(id) {
   projects = projects.filter(p => p.id !== id);
@@ -1725,6 +1723,9 @@ const revObs = new IntersectionObserver(entries => {
 }, {threshold: .14});
 document.querySelectorAll('.reveal, .stat-item').forEach(el => revObs.observe(el));
 
+// ── INIT PROJECTS (must run AFTER revObs is defined) ──
+renderProjects();
+
 /* ─────────── CONTACT FORM ─────────── */
 function handleContact(e) {
   e.preventDefault();
@@ -1746,9 +1747,6 @@ document.querySelectorAll('a[href^="#"]').forEach(a => {
     if (t) { e.preventDefault(); t.scrollIntoView({behavior:'smooth',block:'start'}); }
   });
 });
-
-/* ─────────── INIT ─────────── */
-renderProjects();
 </script>
 </body>
 </html>
