--- a/index.html
+++ b/index.html
@@ -1288,7 +1288,7 @@ document.querySelectorAll('.fc').forEach(card => {
 
 /* ─────────── PROJECT RENDERING ─────────── */
 const DEFAULT_PROJECTS = [
-  {id:'d1',name:'TEST',desc:'AI-powered SaaS analytics platform with real-time ML insights, predictive visualization, and multi-tenant arch.',tags:['React','AI/ML','D3.js','AWS'],emoji:'🖥️',bg:'linear-gradient(135deg,#060a18,#1a1060)',size:'pc-lg',badge:'FEATURED',url:''},
+  {id:'d1',name:'TEST',desc:'AI-powered SaaS analytics platform with real-time ML insights, predictive visualization, and multi-tenant arch.',tags:['React','AI/ML','D3.js','AWS'],emoji:'🖥️',bg:'linear-gradient(135deg,#060a18,#1a1060)',size:'pc-lg',badge:'FEATURED',url:''}
   
 ];
 const allProjects = () => [...DEFAULT_PROJECTS, ...projects];
