--- a/index.html
+++ b/index.html
@@ -1288,7 +1288,7 @@ document.querySelectorAll('.fc').forEach(card => {
 
 /* ─────────── PROJECT RENDERING ─────────── */
 const DEFAULT_PROJECTS = [
-  {id:'d1',name:'TEST',desc:'AI-powered SaaS analytics platform with real-time ML insights, predictive visualization, and multi-tenant arch.',tags:['React','AI/ML','D3.js','AWS'],emoji:'🖥️',bg:'linear-gradient(135deg,#060a18,#1a1060)',size:'pc-lg',badge:'FEATURED',url:'',imageUrl:'https://i.ibb.co/SDttjbCx/face.png'}
+  {id:'d1',name:'SULA-MD',desc:'AI-powered Website Bot management.',tags:['React','AI/ML','D3.js','AWS'],emoji:'🖥️',bg:'linear-gradient(135deg,#060a18,#1a1060)',size:'pc-lg',badge:'ONLINE',url:'sula-md.site',imageUrl:'https://files.catbox.moe/xiy0uc.jpg'}
   
 ];
 const allProjects = () => [...DEFAULT_PROJECTS, ...projects];
